src/parse/snapshots/dilaria__parse__test__literal_bin_op-6.snap
---
source: src/parse/test.rs
expression: ast
---
BinaryOp(
    BinaryOp {
        span: Span(
            0..0,
        ),
        lhs: Literal(
            Number(
                10.0,
                Span(
                    0..0,
                ),
            ),
        ),
        rhs: Literal(
            Number(
                4.0,
                Span(
                    0..0,
                ),
            ),
        ),
        kind: NotEqual,
    },
)
