src/parse/snapshots/dilaria__parse__test__number_literal-5.snap
---
source: src/parse/test.rs
assertion_line: 39
expression: ast

---
Literal(
    Number(
        10.0,
        Span {
            start: 0,
            end: 0,
        },
    ),
)
