src/parse/snapshots/dilaria__parse__test__sub.snap
---
source: src/parse/test.rs
assertion_line: 33
expression: ast

---
BinaryOp(
    BinaryOp {
        span: Span {
            start: 0,
            end: 0,
        },
        lhs: Literal(
            Number(
                10.0,
                Span {
                    start: 0,
                    end: 0,
                },
            ),
        ),
        rhs: Literal(
            Number(
                4.0,
                Span {
                    start: 0,
                    end: 0,
                },
            ),
        ),
        kind: Sub,
    },
)
